[package]
name = "glsl"
version = "0.8.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "A GLSL450 parser"
keywords = ["GLSL", "OpenGL", "SPIR-V", "parser"]
categories = ["parsing", "rendering"]
homepage = "https://github.com/phaazon/glsl"
repository = "https://github.com/phaazon/glsl"
documentation = "https://docs.rs/glsl"
readme = "README.md"

[badges]
travis-ci = { repository = "phaazon/glsl", branch = "master" }
is-it-maintained-issue-resolution = { repository = "phaazon/glsl" }
is-it-maintained-open-issues = { repository = "phaazon/glsl" }
maintenance = { status = "passively-maintained" }

[dependencies.nom]
version = "3.2"
default-features = true
features = ["verbose-errors"]
