[package]
name = "glsl-info"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "A GLSL450/GLSL460 information getter."
keywords = ["GLSL", "OpenGL", "SPIR-V", "parser"]
categories = ["parsing", "rendering"]
homepage = "https://github.com/phaazon/glsl"
repository = "https://github.com/phaazon/glsl"
readme = "README.md"

edition = "2018"

[dependencies]
glsl = "3"
structopt = "0.3"
