[package]
name = "glsl-quasiquote"
version = "3.0.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "The glsl! procedural macro, providing quasiquoting of the glsl crate."
keywords = ["GLSL", "OpenGL", "SPIR-V", "parser", "proc-macro"]
categories = ["parsing", "rendering"]
homepage = "https://github.com/phaazon/glsl"
repository = "https://github.com/phaazon/glsl"
documentation = "https://docs.rs/glsl-quasiquote"
readme = "README.md"

edition = "2018"

[badges]
travis-ci = { repository = "phaazon/glsl", branch = "master" }

[lib]
proc-macro = true

[dependencies]
glsl = "3"
proc-macro2 = "1"
proc-macro-faithful-display = "0.1"
quote = "1"
