[package]
name = "glsl-tree"
version = "0.2.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Print a GLSL AST to stdout"
keywords = ["GLSL", "OpenGL", "SPIR-V", "parser"]
categories = ["parsing", "rendering"]
homepage = "https://github.com/phaazon/glsl"
repository = "https://github.com/phaazon/glsl"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glsl = "6"
