[package]
name = "glsl"
version = "2.0.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "A GLSL450/GLSL460 parser."
keywords = ["GLSL", "OpenGL", "SPIR-V", "parser"]
categories = ["parsing", "rendering"]
homepage = "https://github.com/phaazon/glsl"
repository = "https://github.com/phaazon/glsl"
documentation = "https://docs.rs/glsl"
readme = "README.md"

edition = "2018"

[badges]
travis-ci = { repository = "phaazon/glsl", branch = "master" }

[features]
spirv = ["shaderc"]

[dependencies]
nom = { version = "5" }
shaderc = { version = "0.6", optional = true }
